:white_check_mark: fix tests in all models
